[package]
name = "sgx"
version = "0.6.0"
authors = ["The Enarx Project Developers"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/enarx/sgx"
repository = "https://github.com/enarx/sgx"
description = "Library for Intel SGX"
readme = "README.md"
keywords = ["intel", "sgx"]
categories = ["os", "os::linux-apis", "parsing", "network-programming", "hardware-support"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/sgx", workflow = "test" }
#github = { repository = "enarx/sgx", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/sgx" }
is-it-maintained-open-issues = { repository = "enarx/sgx" }

[dependencies]
bitflags = "^1.3.2"
num-integer = { version = "^0.1.44", default-features = false }
num-traits = { version = "^0.2.14", default-features = false }
openssl = { version = "^0.10.36", optional = true }
rand_core = { version = "^0.6.4", default-features = false }
rsa = { version = "^0.7.1", default-features = false, features = ["pem"] }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
x86_64 = { version = "^0.14.6", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
xsave = { version = "^2.0.0", default-features = false }

[dev-dependencies]
testaso = "0.1"
